--- a/Keras1.ipynb
+++ b/Keras1.ipynb
@@ -19,6 +19,8 @@
     "import tensorflow as tf\n",
     "from keras.models import Sequential\n",
     "from keras.layers import Activation, Dropout, Flatten, Dense\n",
+    "from keras.layers import Activation, Dense\n",
+    "from keras.layers import Activation,",
     "from keras.preprocessing.image import ImageDataGenerator\n",
     "from keras.layers import Convolution2D, MaxPooling2D, ZeroPadding2D\n",
     "from keras import optimizers"
@@ -45,7 +47,7 @@
    },
    "outputs": [],
    "source": [
-    "img_width, img_height = 255, 255\n",
+    "img_width, img_height = 255, 280\n",
     "\n",
     "train_data_dir = \"data/train\"\n",
     "validation_data_dir = \"data/validate\""
@@ -100,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -139,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 48,
    "metadata": {
     "collapsed": true
    },
